--- a/Report/Referances.bib
+++ b/Report/Referances.bib
@@ -49,4 +49,35 @@
 	howpublished = {\url{https://assistant.google.com/intl/en_uk/}}
 }
 
+@misc{ebi ai_2022, 
+	title={Go beyond an AI chatbot - try next generation artificial intelligence}, url={https://ebi.ai/ai-chatbot/?utm_term=ai+chatbot+customer+service&amp;utm_campaign=ebi.ai-search&amp;utm_source=adwords&amp;utm_medium=ppc&amp;hsa_acc=8425067570&amp;hsa_cam=13742917407&amp;hsa_grp=127019733598&amp;hsa_ad=540213601615&amp;hsa_src=g&amp;hsa_tgt=kwd-486416788938&amp;hsa_kw=ai+chatbot+customer+service&amp;hsa_mt=e&amp;hsa_net=adwords&amp;hsa_ver=3&amp;gclid=Cj0KCQiAraSPBhDuARIsAM3Js4rVF2asc7Q9fDTWeDI1qj5vyc0J-69hVEGRlJvaSpfJs_lEFWD-sJ0aAkRyEALw_wcB}, journal={EBI AI}, year={2022}, month={Jan}
+ } 
+
+@misc{ebi ai_2022,
+	title={Go beyond an AI chatbot - try next generation artificial intelligence}, url={https://ebi.ai/ai-chatbot/?utm_term=ai+chatbot+customer+service&amp;utm_campaign=ebi.ai-search&amp;utm_source=adwords&amp;utm_medium=ppc&amp;hsa_acc=8425067570&amp;hsa_cam=13742917407&amp;hsa_grp=127019733598&amp;hsa_ad=540213601615&amp;hsa_src=g&amp;hsa_tgt=kwd-486416788938&amp;hsa_kw=ai+chatbot+customer+service&amp;hsa_mt=e&amp;hsa_net=adwords&amp;hsa_ver=3&amp;gclid=Cj0KCQiAraSPBhDuARIsAM3Js4rVF2asc7Q9fDTWeDI1qj5vyc0J-69hVEGRlJvaSpfJs_lEFWD-sJ0aAkRyEALw_wcB}, journal={EBI AI}, year={2022}, month={Jan}
+} 
+ 
+@misc{ebi,
+	 title={Go beyond an AI chatbot - try next generation artificial intelligence}, url={https://ebi.ai/ai-chatbot/?utm_term=ai+chatbot+customer+service&amp;utm_campaign=ebi.ai-search&amp;utm_source=adwords&amp;utm_medium=ppc&amp;hsa_acc=8425067570&amp;hsa_cam=13742917407&amp;hsa_grp=127019733598&amp;hsa_ad=540213601615&amp;hsa_src=g&amp;hsa_tgt=kwd-486416788938&amp;hsa_kw=ai+chatbot+customer+service&amp;hsa_mt=e&amp;hsa_net=adwords&amp;hsa_ver=3&amp;gclid=Cj0KCQiAraSPBhDuARIsAM3Js4rVF2asc7Q9fDTWeDI1qj5vyc0J-69hVEGRlJvaSpfJs_lEFWD-sJ0aAkRyEALw_wcB}, 
+	 journal={EBI AI},
+	 year={2022}, month={Jan}
+ } 
+
+@misc{Sintef, 
+	title={Chatbots for customer service: User experience and motivation}, url={https://dl.acm.org/doi/pdf/10.1145/3342775.3342784}, journal={Chatbots for customer service | Proceedings of the 1st International Conference on Conversational User Interfaces},
+	author={SINTEF, Asbjørn Følstad and Følstad, Asbjørn and Sintef and SINTEF, Marita Skjuve and Skjuve, Marita and Dublin, University College and Contributor MetricsExpand }, year={2019}, month={Aug}
+}
+ 
+@misc{selenium, 
+	url={https://www.selenium.dev/selenium/docs/api/javascript/index.html}, journal={Index}
+}  
+
+@misc{trainline,
+	title={Search, Compare and Buy Cheap Train Tickets}, url={https://www.thetrainline.com/}, journal={Trainline}
+} 
+
+@misc{Spacydoc, 
+	title={Doc · spacy API documentation}, url={https://spacy.io/api/doc}, journal={Doc}
+} 
+
    
